<resources>
    <string name="app_name">PocketMart</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="iniciar_sesion_descripcion">Inicia sesión en tu cuenta de PocketMart y empieza a comprar.</string>
    <string name="email">Email:</string>
    <string name="ingresa_tu_email">Ingresa tu email</string>
    <string name="contrasena">Contraseña:</string>
    <string name="contrasena_hint">Ingresa tu contraseña</string>
    <string name="registrarse_hook">¿No tienes una cuenta? Registrarse</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrarse_descripcion">Registrate en PocketMart para crear un usuario y empezar a comprar.</string>
    <string name="confirmar_contrasena">Confirmar Contraseña:</string>
    <string name="login_hook">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="contrasenas_deben_coincidir">Las contraseñas deben coincidir</string>
    <string name="llenar_campos">Por favor llene los campos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cuenta">Cuenta</string>
    <string name="pedido">Pedido</string>
    <string name="principal">Principal</string>
    <string name="pocketmart">PocketMart</string>
    <string name="categorias">Categorías</string>
    <string name="productos">Productos</string>
    <string name="descripcion_producto">Descripción del producto:</string>
    <string name="descripcion">Descripción</string>
    <string name="anadir_al_carrito">Añadir al carrito</string>
    <string name="producto_no_encontrado">No se encontró el producto</string>
    <string name="error_al_buscar_producto">Error al buscar producto</string>
    <string name="product_image">Product Image</string>
    <string name="cantidad">Cantidad</string>
    <string name="total_a_pagar">Total a pagar</string>
    <string name="entregar_a_direccion">Entregar a direccion:</string>
    <string name="cambiar">Cambiar</string>
    <string name="tambien_te_podr_a_interesar">Tambien te podría interesar</string>
    <string name="proceder_a_pagar">Proceder a pagar</string>
    <string name="detalles_de_direcci_n">Detalles de dirección:</string>
    <string name="codigo_zip">Codigo Zip:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="departamento">Departamento</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cart_empty">El carrito está vacío</string>
    <string name="log_out">Log Out</string>
</resources>