<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    android:paddingVertical="65dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/iniciar_sesion"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans"
        android:text="@string/iniciar_sesion_descripcion"
        android:textColor="@color/gray"
        android:layout_marginTop="20dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans"
        android:text="@string/email"
        android:layout_marginTop="40dp"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_tint"
            android:fontFamily="@font/dm_sans"
            android:hint="@string/ingresa_tu_email"
            android:textColorHint="@color/dim_gray"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/dm_sans"
        android:text="@string/contrasena"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_tint"
            android:fontFamily="@font/dm_sans"
            android:hint="@string/contrasena_hint"
            android:textColorHint="@color/dim_gray"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/registrarse_hook"
        android:textColor="@color/blue"
        android:textSize="14sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/button_background"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/iniciar_sesion"
        app:backgroundTint="@null" />
</LinearLayout>