<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/pedido"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="18dp"
            android:background="@color/background_tint" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/baseline_account_circle_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/dm_sans_bold"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userImage"
                tools:text="Sample user name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/products_list_background"
            android:padding="25dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/detalles_de_direcci_n"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/background_tint"
                    android:padding="5dp"
                    android:src="@drawable/edit"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/zipTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/codigo_zip"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/zipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/zipTitle"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@null"
                android:hint="@string/codigo_zip"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/directionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/zipCode"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/direcci_n"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/directionTitle"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@null"
                android:hint="@string/direcci_n"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/cityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/direction"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/ciudad"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cityTitle"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@null"
                android:hint="@string/ciudad"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/stateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/departamento"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stateTitle"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="@null"
                android:hint="@string/departamento"
                android:textSize="14sp" />

            <Button
                android:id="@+id/saveChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/state"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="150dp"
                android:background="@drawable/button_background"
                android:text="@string/guardar_cambios"
                app:backgroundTint="@null" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>