<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Fragments.ProductFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/descripcion"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="18dp"
        android:background="@color/background_tint" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/dm_sans_bold"
        android:textSize="24dp"
        tools:text="Sample item" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/dm_sans_medium"
        android:textColor="@color/red"
        android:textSize="16sp"
        tools:text="Sample price" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="25dp"
        android:background="@color/background_tint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/descripcion_producto"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/dm_sans"
        android:textSize="14sp"
        tools:text="Sample description" />

    <Button
        android:id="@+id/add_to_kart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_background"
        android:text="@string/anadir_al_carrito"
        app:backgroundTint="@null" />

</LinearLayout>