<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="center"
            android:text="@string/pedido"
            android:textSize="18sp" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="18dp"
            android:background="@color/background_tint" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp" />

        <TextView
            android:id="@+id/cartEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/cart_empty"
            android:textColor="@color/gray" />

        <ProgressBar
            android:id="@+id/progressBarCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" />


        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="25dp"
            android:background="@color/background_tint" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/totalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/total_a_pagar"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_bold"
                android:textColor="@color/red"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="$0.00" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="25dp"
            android:background="@color/background_tint"
            android:elevation="20dp"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="25dp">

                <TextView
                    android:id="@+id/titleInCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/entregar_a_direccion"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cardLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleInCard"
                    tools:text="Sample direction and location" />

                <!--                <TextView-->
                <!--                    android:id="@+id/changeLocation"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:fontFamily="@font/dm_sans_bold"-->
                <!--                    android:text="@string/cambiar"-->
                <!--                    android:textColor="@color/blue"-->
                <!--                    android:textSize="14sp"-->
                <!--                    app:layout_constraintRight_toRightOf="parent"-->
                <!--                    app:layout_constraintTop_toBottomOf="@id/cardLocation" />-->

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/products_list_background">


            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/tambien_te_podr_a_interesar"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_marginTop="30dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_marginTop="28dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/add_to_kart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/products_recycler"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="150dp"
                android:background="@drawable/button_background"
                android:text="@string/proceder_a_pagar"
                app:backgroundTint="@null" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>