<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".Fragments.HomeFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/app_name"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="18dp"
            android:background="@color/background_tint" />


        <SearchView
            android:id="@+id/search"
            style="@style/CustomSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@null"
            android:iconifiedByDefault="false"
            android:queryHint="Buscar un producto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/categorias"
            android:textSize="16sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/products_list_background">


            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/productos"
                android:textSize="16sp" />

            <ProgressBar
                android:layout_marginTop="30dp"
                android:id="@+id/progressBar"
                android:layout_below="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="120dp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical" />

        </RelativeLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>